# mixed_meal_model_sbml

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  project_setup.md  pyproject.toml
.github/workflows/: build.yml
cli/: cli.py
meal_model_dashboard/: app.py  main.py
meal_model_dashboard/callbacks/: model_load_callbacks.py
meal_model_dashboard/definitions/: element_ids.py  layout_styles.py
meal_model_dashboard/docs/: user_manual.md
meal_model_dashboard/pages/: load_model.py
mixed_meal_model_sbml/: __init__.py  annotations.py  meal_model.py  templates.py
mixed_meal_model_sbml/results/: meal_model.xml
